:sparkles: feature(list movies): add feature to list movies with count of created comments

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,14 @@ env:
 parserOptions:
   ecmaVersion: 8
   sourceType: module
+globals:
+  sails: true
+  _: true
+  # services
+  MovieService: true
+  # models
+  Comment: true
+
 rules:
   max-len:
     - 0
