--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bluebird": "^3.5.5",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -20,13 +21,19 @@
     "grunt-sync": "0.5.2",
     "husky": "^3.0.4",
     "include-all": "^1.0.0",
+    "lodash": "^4.17.15",
+    "node-fetch": "^2.6.0",
     "rc": "1.0.1",
     "sails": "~0.12.13",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-hook-validation": "^0.4.7",
+    "sails-mysql": "0.11.4",
+    "sails-postgresql": "^1.0.2"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js",
+    "start": "NODE_ENV=production node app.js",
+    "dev": "NODE_ENV=development nodemon app.js",
     "lint": "eslint . --fix"
   },
   "husky": {
