--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sails-disk": "~0.10.9",
     "sails-hook-validation": "^0.4.7",
     "sails-mysql": "0.11.4",
-    "sails-postgresql": "^1.0.2"
+    "sails-postgresql": "0.11.4"
   },
   "scripts": {
     "debug": "node debug app.js",
