--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "async-redis": "^1.1.7",
     "bluebird": "^3.5.5",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
