--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "NODE_ENV=production node app.js",
+    "start": "node app.js",
     "dev": "NODE_ENV=development nodemon app.js",
     "lint": "eslint . --fix"
   },
@@ -48,6 +48,7 @@
   "author": "hackthievist",
   "license": "",
   "devDependencies": {
+    "chance": "^1.0.18",
     "eslint": "^6.2.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
