--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,7 +2,7 @@ extends: airbnb-base
 env:
   es6: true
   node: true
-  jest: true
+  mocha: true
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
