--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "2"
 services:
-  web:
+  api:
+    env_file:
+      - ./docker-config/secrets.env
     container_name: paystack-wars
     restart: always
     build: .
@@ -13,6 +15,14 @@ services:
     image: postgres
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: "root"
   redis:
     container_name: redis
     image: redis
+    ports:
+      - "6379:6379"
+volumes:
+  postgres_data:
